# utilities

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  containerapp.yaml  main.py  ms-forms-creation-guide.md  ms-forms-incident-spec.json  ms-forms-questions.csv  power-automate-create-form.json  pyproject.toml
.claude/worktrees/e2e-tests/: pyproject.toml
.claude/worktrees/e2e-tests/.github/workflows/: ci.yml
.claude/worktrees/e2e-tests/config/: organization.json
.claude/worktrees/e2e-tests/docs/neris/: eso-field-analysis.md
.claude/worktrees/e2e-tests/scripts/: deploy-ops.sh
.claude/worktrees/e2e-tests/src/sjifire/entra/: users.py
.claude/worktrees/e2e-tests/src/sjifire/ops/attachments/: models.py
.claude/worktrees/e2e-tests/src/sjifire/ops/chat/: routes.py
.claude/worktrees/e2e-tests/src/sjifire/ops/dispatch/: analysis.py
.claude/worktrees/e2e-tests/src/sjifire/ops/events/: __init__.py  store.py
.claude/worktrees/e2e-tests/src/sjifire/ops/incidents/: store.py
.claude/worktrees/e2e-tests/src/sjifire/ops/schedule/: tools.py
.claude/worktrees/e2e-tests/src/sjifire/scripts/: ispyfire_sync.py  ms_group_sync.py
.claude/worktrees/e2e-tests/tests/: test_duty_calendar_sync_script.py  test_ropc_credential.py
.claude/worktrees/e2e-tests/tests/ops/: test_dashboard.py  test_geo.py  test_neris_tools.py
.claude/worktrees/fix-ghost-member-removal/: .dockerignore  README.md
.claude/worktrees/fix-neris-reporting-bugs/: containerapp.yaml  pyproject.toml
.github/workflows/: calendar-sync.yml  ci.yml  codeql.yml  duty-calendar-sync.yml  entra-sync.yml  ispyfire-sync.yml  mcp-deploy.yml  ops-deploy.yml  update-ms-forms.yml
.hypothesis/constants/: 0e53a7405c577905  1d091298271a4002  1fc41939541e440a  24c6b27b3a67c7d1  28971655d0bf7045  2b13ee6f8dbf0a9c  322701050bee425a  341ae8a3c3e7aa0f  394adf8e5506f47e  54d27c87a946ea37  5a547f10c985887b  633a3b84b003a6d3  699de69f7a5af24c  6e2c4957229de2f3  7ae65947450ba48d  82c2ae3b64fe0aae  990dad398cd4943d  99f8b793c6aeefab  9afba5059b06ae47  abd1fc39c74b65e9  bbfe87979645e1f1  c0359216abbfcff2  cb15c393b077ac2f  cf68c642f641c256  db2c236e426f3bd8  f7f5f1733043ef8b
config/: apparatus.csv  email_dispatch.json  entra_sync.json  group_mappings.json  organization.json  personnel.csv  personnel.json
config/signatures/: default.html  default.json  default.txt
config/tenants/: sjifire.json
docs/: aladtec-outlook-calendar-guide.html  dashboard-prototype.jsx  dashboard-template.html  dispatch-cheatsheet.md  dispatch-setup.md  general-chat-prompt.md  incident-chat-prompt.md  mcp-setup-guide.md  mcp-start-session.md  ms-forms-management.md  power-automate-setup.md
docs/neris/: architecture.md  claude-project-instructions.md  gap-analysis.md  incident-report-instructions.md  neris-cheat-sheet.md
functions/: function_app.py  requirements.txt
scripts/: compare_user_fields.py  deploy-mcp.sh  deploy-ops.sh  find_signatures.py  pull-secrets.sh  setup-azure-ops.sh  setup-azure.sh
src/sjifire/: __init__.py
src/sjifire/aladtec/: __init__.py  client.py  entra_sync.py  member_scraper.py  models.py  schedule.py  schedule_scraper.py  scraper.py
src/sjifire/calendar/: __init__.py  duty_sync.py  models.py  personal_sync.py  subscriptions.py  sync.py
src/sjifire/core/: __init__.py  anthropic.py  backup.py  config.py  constants.py  extension_attrs.py  group_strategies.py  msgraph_client.py  normalize.py  pii.py  schedule.py  tenant.py
src/sjifire/dispatch/: __init__.py  cleanup.py  processor.py
src/sjifire/entra/: aladtec_import.py  group_sync.py  groups.py  users.py
src/sjifire/eso/: __init__.py  models.py  scraper.py
src/sjifire/exchange/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  factories.py  test_aladtec_client.py  test_aladtec_import.py  test_aladtec_models.py  test_aladtec_schedule.py  test_aladtec_scraper.py  test_calendar_models.py  test_calendar_sync.py  test_calendar_sync_script.py  test_core_anthropic.py  test_core_backup.py  test_core_config.py  test_core_constants.py  test_core_schedule.py  test_duty_calendar_sync_script.py  test_entra_groups.py  test_entra_users.py  test_exchange_client.py  test_exchange_group_sync.py  test_group_strategies.py  test_ispyfire.py  test_ispyfire_client.py  test_ispyfire_sync_script.py  test_ms_group_sync.py  test_msgraph_client.py  test_neris_client.py  test_normalize.py  test_personal_calendar_sync.py  test_personal_calendar_sync_script.py  test_personal_sync.py  test_property_based.py  test_ropc_credential.py  test_signature_sync.py  test_station_groups.py
tests/core/: test_pii.py
tests/e2e/: conftest.py  seed_data.py  test_dashboard_data.py  test_dashboard_smoke.py  test_kiosk.py
tests/mcp/: test_auth.py  test_chat_budget.py  test_chat_engine.py  test_chat_store.py  test_dashboard.py  test_dispatch_models.py  test_dispatch_store.py  test_dispatch_tools.py  test_incident_store.py  test_incident_tools.py  test_models.py  test_neris_tools.py  test_schedule_models.py  test_schedule_store.py  test_token_store.py
tests/ops/: test_attachment_routes.py  test_attachment_store.py  test_attachment_tools.py  test_auth.py  test_chat_budget.py  test_chat_engine.py  test_chat_engine_integration.py  test_chat_routes.py  test_chat_store.py  test_chat_tools_dispatch.py  test_chat_turn_lock_routes.py  test_conversation_store_with_locks.py  test_dashboard.py  test_dispatch_analysis.py  test_dispatch_enrich.py  test_dispatch_sanitize.py  test_dispatch_store.py  test_dispatch_sync.py  test_dispatch_tools.py  test_event_archive.py  test_events.py  test_events_calendar.py  test_incident_store.py  test_incident_tools.py  test_kiosk_replay.py  test_lookup_location.py  test_models.py  test_oauth_provider.py  test_schedule_models.py  test_schedule_store.py  test_schedule_tools.py  test_tasks_dispatch_sync.py  test_tasks_ispyfire_sync.py  test_tasks_neris_cache.py  test_tasks_neris_sync.py  test_tasks_registry.py  test_tasks_runner.py  test_tasks_schedule_refresh.py  test_token_store.py  test_turn_lock.py  (+1 more)
tests/scripts/: test_ispyfire_dispatch.py
(+231 files in other folders)
