[project]
name = "sjifire-utilities"
version = "0.1.0"
description = "SJI Fire District utilities for integrations"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.19.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.0",
    "msgraph-sdk>=1.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
aladtec-list = "sjifire.scripts.aladtec_list:main"
aladtec-audit = "sjifire.scripts.aladtec_audit:main"
aladtec-sync = "sjifire.scripts.aladtec_sync:main"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "ty>=0.0.13",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sjifire"]
